add check user viewr salary

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,27 +1,27 @@
-spring.datasource.url= jdbc:sqlserver://localhost:1433 ;encrypt=true;trustServerCertificate=true;databaseName=EZHCM
-spring.datasource.username= sa
-spring.datasource.password= 12345
-spring.jpa.properties.hibernate.legacy_limit_handler=true
-#ph?i có cái này m?i dùng ???c pageable
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.SQLServer2008Dialect
-spring.jpa.hibernate.ddl-auto= update
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-server.port=8081
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
-#
-#spring.datasource.url=jdbc:sqlserver://192.168.30.188:1436;encrypt=true;trustServerCertificate=true;databaseName=ezhcm
+#spring.datasource.url= jdbc:sqlserver://localhost:1433 ;encrypt=true;trustServerCertificate=true;databaseName=EZHCM
 #spring.datasource.username= sa
-#spring.datasource.password= newez@123
+#spring.datasource.password= 12345
 #spring.jpa.properties.hibernate.legacy_limit_handler=true
+##ph?i có cái này m?i dùng ???c pageable
 #spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.SQLServer2008Dialect
-##spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.SQLServerDialect
 #spring.jpa.hibernate.ddl-auto= update
 #spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
+#server.port=8081
 #spring.servlet.multipart.max-file-size=10MB
 #spring.servlet.multipart.max-request-size=10MB
-#server.port=8082
+
+spring.datasource.url=jdbc:sqlserver://192.168.30.188:1436;encrypt=true;trustServerCertificate=true;databaseName=ezhcm
+spring.datasource.username= sa
+spring.datasource.password= newez@123
+spring.jpa.properties.hibernate.legacy_limit_handler=true
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.SQLServer2008Dialect
+#spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.SQLServerDialect
+spring.jpa.hibernate.ddl-auto= update
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+server.port=8081
