--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
     implementation 'org.modelmapper:modelmapper:2.3.8'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
 // https://mvnrepository.com/artifact/com.ibm.informix/jdbc
 }
 
